# JikkyoSubtitle

./: AudioCapture.cpp  AudioCapture.h  CMakeLists.txt  README.md  SpeechRecognition.cpp  SpeechRecognition.h  VC-LTL.cmake  assets.rc  c-api.h  config.json  danmaku.cpp  danmaku.h  main.cpp  vcpkg.json
configs/: README.md  config.llama.json  config.sakura.json
wtfdanmaku/include/: WTFDanmaku.h  WTF_API.h
